; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cache.c_cache_enter.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_cache.c_cache_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }
%struct.componentname = type { i64, i32, i32 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cache_enter(%struct.vnode* %0, %struct.vnode* %1, %struct.componentname* %2) #0 {
  %4 = alloca %struct.vnode*, align 8
  %5 = alloca %struct.vnode*, align 8
  %6 = alloca %struct.componentname*, align 8
  %7 = alloca i8*, align 8
  store %struct.vnode* %0, %struct.vnode** %4, align 8
  store %struct.vnode* %1, %struct.vnode** %5, align 8
  store %struct.componentname* %2, %struct.componentname** %6, align 8
  %8 = load %struct.componentname*, %struct.componentname** %6, align 8
  %9 = getelementptr inbounds %struct.componentname, %struct.componentname* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %3
  %13 = load %struct.componentname*, %struct.componentname** %6, align 8
  %14 = getelementptr inbounds %struct.componentname, %struct.componentname* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.componentname*, %struct.componentname** %6, align 8
  %17 = getelementptr inbounds %struct.componentname, %struct.componentname* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @hash_string(i32 %15, i32 %18)
  %20 = load %struct.componentname*, %struct.componentname** %6, align 8
  %21 = getelementptr inbounds %struct.componentname, %struct.componentname* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  br label %22

22:                                               ; preds = %12, %3
  %23 = load %struct.componentname*, %struct.componentname** %6, align 8
  %24 = getelementptr inbounds %struct.componentname, %struct.componentname* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.componentname*, %struct.componentname** %6, align 8
  %27 = getelementptr inbounds %struct.componentname, %struct.componentname* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.componentname*, %struct.componentname** %6, align 8
  %30 = getelementptr inbounds %struct.componentname, %struct.componentname* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i32, i32* @FALSE, align 4
  %33 = call i8* @add_name_internal(i32 %25, i32 %28, i64 %31, i32 %32, i32 0)
  store i8* %33, i8** %7, align 8
  %34 = call i32 (...) @NAME_CACHE_LOCK()
  %35 = load %struct.vnode*, %struct.vnode** %4, align 8
  %36 = load %struct.vnode*, %struct.vnode** %5, align 8
  %37 = load %struct.componentname*, %struct.componentname** %6, align 8
  %38 = load i8*, i8** %7, align 8
  %39 = call i32 @cache_enter_locked(%struct.vnode* %35, %struct.vnode* %36, %struct.componentname* %37, i8* %38)
  %40 = call i32 (...) @NAME_CACHE_UNLOCK()
  ret void
}

declare dso_local i64 @hash_string(i32, i32) #1

declare dso_local i8* @add_name_internal(i32, i32, i64, i32, i32) #1

declare dso_local i32 @NAME_CACHE_LOCK(...) #1

declare dso_local i32 @cache_enter_locked(%struct.vnode*, %struct.vnode*, %struct.componentname*, i8*) #1

declare dso_local i32 @NAME_CACHE_UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
